kubernets/mongo_deployemn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: frescons
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
          protocol: TCP
