kubernets/node_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-mongo-page-hit
  namespace: frescons
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-mongo-page-hit

  template:
    metadata:
      labels:
        app: node-mongo-page-hit
    spec:
      containers:
      - name: node-mongo-page-hit
        image: romitsutariya/node-mongo-page-hit:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
