kubernets/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: frescons  
spec:
  selector:
    app: nginx
  type: NodePort  
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
