kubernets/node_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-mongo-page-hit
  namespace: frescons  
spec:
  selector:
    app: node-mongo-page-hit
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30800
