kubernets/ingrss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  namespace: frescons
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /    
spec:
  rules:
  - host: localhost/nginx
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
  - host: localhost/nginx
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-mongo-page-hit
            port: 
              number: 8000
